# QUARRY

./: .gitignore  README.md  pyproject.toml  run_quarry.py
data/: work_orders_10000.csv  work_orders_short_text_10000.txt
output/: rules.txt  transactions.csv
