[tool.poetry]
name = "quarry"
version = "0.1.0"
description = "Code for running QUARRY on an existing graph."
authors = ["Michael Stewart <michael.stewart.webdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
efficient-apriori = "^2.0.1"
py2neo = "^2021.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
